# sm-model-integrity-layer

./: .gitignore  LICENSE  README.md  WHITEPAPER.md  pyproject.toml
examples/: basic_provenance.py  bridge_integration.py  integrity_check.py  signed_attestation.py
sm_integrity/: __init__.py  _compat.py  _types.py  attestation.py  governance.py  hashing.py  lineage.py  protocol.py  provenance.py
tests/: conftest.py  test_attestation.py  test_compat.py  test_governance.py  test_hashing.py  test_json_shapes.py  test_lineage.py  test_protocol.py  test_provenance.py
